--- a/Curso React - 4/Buscador-De-Peliculas/package.json
+++ b/Curso React - 4/Buscador-De-Peliculas/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "fetch": "^1.1.0",
+    "just-debounce-it": "3.2.0",
+    "pnpm": "^9.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
